# AILearningCompanion

./: .replit  AI_ENHANCEMENT_ROADMAP.md  IMPLEMENTATION_PREVIEW.md  LOCAL_DEPLOYMENT.md  QDRANT_MIGRATION_PLAN.md  README.md  ai_tutor.py  app.py  document_processor.py  homework_assistant.py  homework_progress.json  models.py  number_formatter.py  pyproject.toml  qdrant_integration_example.py  replit.md  routes.py  setup_unix.sh  setup_windows.bat  simple_voice_tutor.py  test_ai.html  voice_reading_progress.json  voice_tutor.py
attached_assets/: Next-Tasks_1752049938160.txt
instance/: tutor_app.db
local_deployment/: QUICK_START.md  setup_local.py
static/css/: custom.css
templates/: ask_question.html  ask_question_ajax.html  base.html  exam_preparation.html  homework.html  homework_enhanced.html  index.html  interactive_reading.html  progress_report.html  quiz.html  simple_ask.html  simple_upload_subject.html  simple_upload_test.html  subject_chapters.html  subjects.html  upload_subject.html  upload_subject_fixed.html  view_document.html
uploads/: 0278fe15-eeb7-499b-bd99-19ca817ab725.docx  08a04e8d-7c4f-4c15-afa8-79e224fe5090.docx  18cf1427-57e7-45bb-a3c3-878b83d905e3.docx  1c969674-40ed-4fb8-81d6-6d829fee9f91.docx  1f22d239-69a3-408a-a978-da9512d52b03.docx  240f515b-c9cf-4444-9236-7345470c0fcc.docx  29176e5e-f7bc-4a00-9218-3acee3404bba.docx  2a90c170-61cb-4343-b0df-1bcb4e021b98.docx  2aa5d28b-ed0f-476c-930f-282ff2d5e9d6.docx  32f721ca-c905-4959-ba11-9eed49af48ae.docx  3c46221b-3b72-4c54-8a5a-6e44b4541b26.docx  42984ba4-2a63-46e3-a382-707ad5f27e81.docx  (+32 more)
(+1 files in other folders)
